# AnimeAI

./: .env.example  .gitignore  DEMO_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY_CHECKLIST.md  ENVIRONMENT_SETUP.md  FINAL_STATUS.md  FINAL_VERIFICATION_REPORT.md  INTEGRATION_STATUS.md  PROJECT_COMPLETION_STATUS.md  README.md  README_NEW.md  REPLIT_DEPLOYMENT_GUIDE.md  api-test-console.js  complete_gui_test.py  debug_gui.py  debug_imports.py  demo-launcher.js  demo.html  enhanced_animation_test.py  final_animation_test.py  final_gui_test.py  final_verification.py  index.html  index.js  inject_character.py  netlify.toml  nodemon.json  package-lock.json  performance-monitor.js  quick_start_animation_test.py  quick_test.py  real-api-test.js  replit.nix  requirements.txt  run_final_verification.py  run_gui.bat  screenshot_capture.py  simple_image_test.py  simple_test.py  (+25 more)
ai/animation_synthesis/: motion_generator.py
ai/image_to_rig/: character_processor.py
animerig-ai/: .env.example  .gitattributes  .replit  0.10.13  0.22.0  1.0.0  1.11.0  1.24.0  10.0.0  2.31.0  3.1.7  4.35.0  4.8.0  6.6.0  API_TESTING_GUIDE.md  DEMO_README.md  DEMO_VIDEO_GUIDE.md  README.md  index.showcase.html  live-demo-creator.js  manual_ui_test.py  package.json  requirements.txt  server.js  server.simple.js  test_mesh_deformation.py  tsconfig.showcase.json  vite.config.showcase.ts
animerig-ai/.github/workflows/: deploy-demo.yml
animerig-ai/ai/animation/: facial_animation.py  live2d_animator.py  live2d_animator_backup.py  multi_angle_system.py  professional_animator.py  skeletal_animation_engine.py  skeletal_system.py  skeletal_system_fixed.py
animerig-ai/ai/animation_synthesis/: motion_generator.py
animerig-ai/ai/image_to_rig/: character_processor.py
animerig-ai/backend/: go.mod
animerig-ai/docs/: AI_CHARACTER_ENGINE.md
animerig-ai/engine/: CMakeLists.txt
animerig-ai/engine/cmake/: AnimeRigEngineConfig.cmake.in
animerig-ai/engine/include/core/: Engine.h
animerig-ai/engine/src/animation/: AnimationSystem.cpp
animerig-ai/engine/src/core/: Engine.cpp
animerig-ai/engine/src/physics/: PhysicsEngine.cpp
animerig-ai/engine/src/python_bindings/: bindings.cpp
animerig-ai/engine/src/renderer/: CharacterRenderer.h  CharacterRenderer_complex.cpp
animerig-ai/engine/src/skeleton/: SkeletonManager.cpp  SkeletonRig.cpp
animerig-ai/frontend/desktop/: main.py  premium_ui.py  premium_ui_simple.py
animerig-ai/scripts/: run.sh  test.sh
animerig-ai/src/: main.showcase.tsx  service-worker.ts
animerig-ai/src/app/: App.tsx
animerig-ai/src/engine/: types.d.ts.map  types.js
animerig-ai/tests/: bone_fix_verification.py  visual_verification_test.py
animerig-ai/verification_results/: FINAL_GUI_VERIFICATION_REPORT.md  gui_state_report.txt  performance_checklist.txt  visual_checklist.txt
backend/: go.sum
backend/cmd/server/: main.go
docs/: DEPLOYMENT.md
engine/include/animation/: AnimationSystem.h
engine/include/mesh/: MeshLoader.h
engine/include/physics/: PhysicsEngine.h
engine/include/renderer/: CharacterRenderer.h
engine/include/skeleton/: SkeletonManager.h  SkeletonRig.h
engine/src/mesh/: MeshLoader.cpp
engine/src/renderer/: CharacterRenderer.cpp
frontend/desktop/: main.py
scripts/: build.sh
src/ai/: AIAnimationEngine.ts  index.ts
src/ai/analysis/: AnalysisEngine.ts
src/ai/conversation/: ConversationEngine.ts
src/ai/image-processing/: AutoRigger.ts  CharacterExtractor.ts  MultiViewGenerator.ts  SkeletonGenerator.ts
src/ai/voice/: EmotionalVoiceSynthesis.ts
src/app/: App.css  App.showcase.tsx
src/app/components/: CharacterCanvas.css  CharacterCanvas.demo.tsx  CharacterCreator.css  CharacterCreator.tsx  CharacterGenerationModal.tsx  ChatInterface.css  DemoCharacterCreation.tsx  (+5 more)
src/backend/: server.simple.ts  server.ts
src/engine/: types.d.ts  types.ts
verification_results/: FINAL_VERIFICATION_SUMMARY.txt  comprehensive_report.txt  final_verification_results.json  gui_test_log.txt  gui_test_report.txt  manual_test_results.txt
(+38 files in other folders)
